Update for fillNumber
