# lib/domain/dtos/CreateLhcFillDto.js
@@ -11,12 +11,14 @@
  * or submit itself to any jurisdiction.
  */
 const Joi = require('joi');
+const EntityIdDto = require('./EntityIdDto');
 
 const BodyDto = Joi.object({
+    fillNumber: EntityIdDto.required(),
     stableBeamsStart: Joi.date().optional(),
     stableBeamsEnd: Joi.date().optional(),
     stableBeamsDuration: Joi.number().optional(),
-    beamType: Joi.string().valid('p-p', 'p-Pb', 'Pb-Pb').optional(),
+    beamType: Joi.string().optional(),
     fillingSchemeName: Joi.string().optional(),
 });
 
