# lib/domain/dtos/UpdateLhcFillDto.js
@@ -21,7 +21,7 @@ const BodyDto = Joi.object({
 });
 
 const ParamsDto = Joi.object({
-    lhcFillId: Joi.number(),
+    fillNumber: Joi.number().required(),
 });
 const QueryDto = Joi.object({
     token: Joi.string(),
