# lib/server/controllers/lhcFill.controller.js
@@ -146,7 +146,7 @@ const getLhcFillById = async (request, response, next) => {
             errors: [
                 {
                     status: '404',
-                    title: `LhcFill with this id (${value.params.lhcFillId}) could not be found`,
+                    title: `LhcFill with this id (${value.params.fillNumber}) could not be found`,
                 },
             ],
         });
@@ -204,7 +204,7 @@ const getRunByRunNumber = async (request, response, next) => {
             errors: [
                 {
                     status: '404',
-                    title: `The lhcFill (${value.params.lhcFillId}) does not contain the run with run number (${value.params.runNumber})`,
+                    title: `The lhcFill (${value.params.fillNumber}) does not contain the run with run number (${value.params.runNumber})`,
                 },
             ],
         });
