# spec/openapi-source.yaml
@@ -196,9 +196,9 @@ paths:
           $ref: '#/components/responses/NotFound'
         default:
           $ref: '#/components/responses/UnexpectedError'
-  /lhcFills/{lhcFillId}:
+  /lhcFills/{fillNumber}:
     parameters:
-      - $ref: '#/components/parameters/LhcFillId'
+      - $ref: '#/components/parameters/FillNumber'
     get:
       operationId: getLhcFillById
       summary: List all LhcFills
@@ -229,11 +229,11 @@ paths:
           $ref: '#/components/responses/UnexpectedError'
       tags:
         - lhcFill
-  /lhcFills/{lhcFillId}/runs:
+  /lhcFills/{fillNumber}/runs:
     parameters:
-      - $ref: '#/components/parameters/LhcFillId'
+      - $ref: '#/components/parameters/FillNumber'
     get:
-      operationId: listRunsByLhcFillId
+      operationId: listRunsByFillNumber
       summary: Lists all tags associated with a log
       responses:
         '200':
@@ -246,12 +246,12 @@ paths:
           $ref: '#/components/responses/UnexpectedError'
       tags:
         - lhcFill
-  /lhcFills/{lhcFillId}/runs/{runNumber}:
+  /lhcFills/{fillNumber}/runs/{runNumber}:
     parameters:
-      - $ref: '#/components/parameters/LhcFillId'
+      - $ref: '#/components/parameters/FillNumber'
       - $ref: '#/components/parameters/RunNumber'
     get:
-      operationId: getRunByLhcFillIdAndRunNumber
+      operationId: getRunByFillNumberAndRunNumber
       summary: Gives the possibility to find a run by run number
       responses:
         '200':
@@ -675,6 +675,13 @@ components:
       required: true
       schema:
         $ref: '#/components/schemas/EnvironmentId'
+    FillNumber:
+      name: FillNumber
+      description: The id of the lhcFill to retrieve
+      in: path
+      required: true
+      schema:
+        $ref: '#/components/schemas/EntityId'
     FilterLogs:
       name: filter
       description: Specifies the filter requirements.
@@ -704,13 +711,6 @@ components:
       schema:
         $ref: '#/components/schemas/FlpSortOptions'
       style: deepObject
-    LhcFillId:
-      name: lhcFillId
-      description: The id of the lhcFill to retrieve
-      in: path
-      required: true
-      schema:
-        $ref: '#/components/schemas/EntityId'
     LogId:
       name: logId
       description: The id of the log to retrieve
@@ -1724,7 +1724,7 @@ components:
       description: Describes the current situation of lhc
       type: object
       properties:
-        id:
+        fillNumber:
           $ref: '#/components/schemas/EntityId'
         stableBeamsDuration:
           description: Float value of the time
